k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moneylog-app
spec:
  selector:
    app: moneylog-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
